fix: Highscore wrapping

--- a/css/styles.css
+++ b/css/styles.css
@@ -27,6 +27,7 @@ body {
   font-weight: bold;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   color: aquamarine;
+  white-space: nowrap;
 }
 .scoreBody {
   position: absolute;
